[package]
name = "actor_link"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "db_populate"
path = "src/db_populate.rs"


[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
rusqlite = "0.33.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3"
actix-web = "4.9.0"
